@@ -123,6 +123,7 @@ struct mosquitto {
 	enum mosquitto_client_state state;
 	time_t last_msg_in;
 	time_t last_msg_out;
+	time_t ping_t;
 	uint16_t last_mid;
 	struct _mosquitto_packet in_packet;
 	struct _mosquitto_packet *current_out_packet;
