@@ -45,13 +45,18 @@ POSSIBILITY OF SUCH DAMAGE.
 
 int _mosquitto_send_pingreq(struct mosquitto *mosq)
 {
+	int rc;
 	assert(mosq);
 #ifdef WITH_BROKER
 	_mosquitto_log_printf(NULL, MOSQ_LOG_DEBUG, "Sending PINGREQ to %s", mosq->id);
 #else
 	_mosquitto_log_printf(mosq, MOSQ_LOG_DEBUG, "Sending PINGREQ");
 #endif
-	return _mosquitto_send_simple_command(mosq, PINGREQ);
+	rc = _mosquitto_send_simple_command(mosq, PINGREQ);
+	if(rc == MOSQ_ERR_SUCCESS){
+		mosq->ping_t = time(NULL);
+	}
+	return rc;
 }
 
 int _mosquitto_send_pingresp(struct mosquitto *mosq)
